platform/dev/minikube/k8s-manifest/k8s-manifest.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: optimap-frontend
spec:
  selector:
    app: optimap-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - optimap.local
    secretName: optimaprime-tls
  rules:
  - host: optimap.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: optimap-backend
            port:
              number: 8000
      - path: /engine(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: optimap-engine
            port:
              number: 8001
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: optimap-frontend
            port:
              number: 5173
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: optimap-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optimap-mongodb
  template:
    metadata:
      labels:
        app: optimap-mongodb
    spec:
      containers:
        - name: optimap-mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/data/db"
              name: mongodb-data
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: optimap-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: optimap-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optimap-postgres
  template:
    metadata:
      labels:
        app: optimap-postgres
    spec:
      containers:
        - name: optimap-postgres
          image: postgres:16
          ports:
            - containerPort: 5432

          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: db-data
              readOnly: false
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: optimap-postgres
spec:
  selector:
    app: optimap-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
